complete rework now that I understand async much better

--- a/test/lycan.cfg
+++ b/test/lycan.cfg
@@ -1,5 +1,5 @@
 {
-  "flavor": "retail",
+  "mode": "retail",
   "retail": {
     "installedAddons": "/home/mike/projects/lycan/test/lycan_addons.json",
     "addonDir": "/home/mike/projects/lycan/test/addons/"
