--- a/lycan.cfg
+++ b/lycan.cfg
@@ -1,6 +1,6 @@
 {
   "mode": "retail",
-  "githubToken": "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",
+  "githubToken": "",
   "retail": {
     "addonJsonFile": "/home/mike/projects/lycan/test/_retail_/WTF/lycan_addons.json",
     "installDir": "/home/mike/projects/lycan/test/_retail_/Interface/AddOns",
